--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "tsparticles": "^2.0.6",
-    "tsparticles-engine": "^2.0.6",
-    "tsparticles-slim": "^2.0.6",
-    "vue": "^3.2.33",
-    "vue3-particles": "^2.0.6"
+    "tsparticles": "^2.11.1",
+    "tsparticles-engine": "^2.11.1",
+    "tsparticles-slim": "^2.11.1",
+    "vue": "^3.3.4",
+    "vue3-particles": "^2.11.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^18.0.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@types/node": "^20.4.4",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-vue": "^9.15.1",
     "prettier": "^3.0.0",
-    "typescript": "~5.1.0",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.0"
+    "typescript": "^5.1.6",
+    "vite": "^4.4.7",
+    "vue-tsc": "^1.8.6"
   }
 }
